<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lwd726gmail.scarnesdice.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:text="@string/userscore"
        android:id="@+id/yourscoreis" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/yourscoreis"
        android:text="@string/score_0"
        android:layout_marginRight="5dp"
        android:id="@+id/yourscore" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@+id/yourscore"
        android:text="@string/compscore"
        android:id="@+id/compscoreis" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/compscoreis"
        android:layout_marginRight="5dp"
        android:text="@string/score_0"
        android:id="@+id/compscore" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourscoreis"
        android:text="@string/clear_string"
        android:id="@+id/currentround" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourscorethisround"
        android:id="@+id/scorethisround"
        android:layout_below="@+id/currentround" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/scorethisround"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/currentround"
        android:text="@string/score_0"
        android:id="@+id/currentscore" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/dice_pic"
        android:src="@drawable/dice1"
        android:layout_below="@+id/yourscore"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rollbutton"
        android:layout_below="@+id/dice_pic"
        android:layout_marginTop="3dp"
        android:layout_alignParentLeft="true"
        android:onClick="roll_dice"
        android:clickable="true"
        android:layout_alignParentStart="true"
        android:text="ROLL" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/holdbutton"
        android:layout_alignBaseline="@+id/rollbutton"
        android:layout_toRightOf="@+id/rollbutton"
        android:clickable="true"
        android:onClick="hold_button"
        android:text="HOLD"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetbutton"
        android:layout_alignBaseline="@id/holdbutton"
        android:layout_toRightOf="@id/holdbutton"
        android:clickable="true"
        android:onClick="reset_button"
        android:text="RESET"/>

</RelativeLayout>
